--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.2",
+    "chai-sorted": "^0.1.0",
     "mocha": "^4.0.1"
-  }
+  },
+  "dependencies": {}
 }
